--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                         <div class="p-5" style="width: 100%; max-width: 900px;">
                             <h5 class="text-white text-uppercase mb-md-3">Organización juvenil</h5>
                             <h1 class="display-3 text-white mb-md-4">Romper con la estigmatización cultural</h1>
-                            <a href="" class="btn btn-primary py-md-2 px-md-4 font-weight-semi-bold mt-2">CONÓCENOS MÁS</a>
+                            <a href="YAW.pdf" download="YAW-INFORMACIÓN" class="btn btn-primary py-md-2 px-md-4 font-weight-semi-bold mt-2">CONÓCENOS MÁS</a>
                         </div>
                     </div>
                 </div>
@@ -82,7 +82,7 @@
                         <div class="p-5" style="width: 100%; max-width: 900px;">
                             <h5 class="text-white text-uppercase mb-md-3">Organización juvenil</h5>
                             <h1 class="display-3 text-white mb-md-4">Conservar y valorar la diversidad</h1>
-                            <a href="YAW.pdf" download="Yaw-conocenos" class="btn btn-primary py-md-2 px-md-4 font-weight-semi-bold mt-2">CONÓCENOS MÁS</a>
+                            <a href="YAW.pdf" download="YAW-INFORMACIÓN" class="btn btn-primary py-md-2 px-md-4 font-weight-semi-bold mt-2">CONÓCENOS MÁS</a>
                         </div>
                     </div>
                 </div>
@@ -92,7 +92,7 @@
                         <div class="p-5" style="width: 100%; max-width: 900px;">
                             <h5 class="text-white text-uppercase mb-md-3">Organización juvenil</h5>
                             <h1 class="display-3 text-white mb-md-4">Formar una mentalidad abierta</h1>
-                            <a href="" class="btn btn-primary py-md-2 px-md-4 font-weight-semi-bold mt-2">CONÓCENOS MÁS</a>
+                            <a href="YAW.pdf" download="YAW-INFORMACIÓN" class="btn btn-primary py-md-2 px-md-4 font-weight-semi-bold mt-2">CONÓCENOS MÁS</a>
                         </div>
                     </div>
                 </div>
@@ -181,7 +181,7 @@
                         </div>
                         <div class="col-sm-6 pb-1">
                             <div class="d-flex flex-column align-items-center border px-4 mb-4">
-                                <h2 class="display-3 text-primary mb-3" data-toggle="counter-up">80</h2>
+                                <h2 class="display-3 text-primary mb-3" data-toggle="counter-up">85</h2>
                                 <h5 class="font-weight-bold mb-4">Voluntarios</h5>
                             </div>
                         </div>
@@ -213,12 +213,24 @@
                     <div class="owl-carousel team-carousel">
                         <div class="team-item">
                             <div class="position-relative">
+                                <img class="img-fluid w-100" src="img/team-1.jpg" alt="">
+                                <div class="team-overlay position-absolute d-flex align-items-center justify-content-center m-3">
+                                    <div class="d-flex align-items-center justify-content-start">
+                                        <a class="btn btn-outline-secondary rounded-circle text-center px-0" style="width: 38px; height: 38px;" href="#"><i class="fab fa-instagram"></i></a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="border border-top-0 text-center" style="padding: 30px;">
+                                <h5 class="font-weight-bold">Ariana Narrea</h5>
+                                <span>Directora general</span>
+                            </div>
+                        </div>
+                        <div class="team-item">
+                            <div class="position-relative">
                                 <img class="img-fluid w-100" src="img/DANNA PEÑA.jpg" alt="">
                                 <div class="team-overlay position-absolute d-flex align-items-center justify-content-center m-3">
                                     <div class="d-flex align-items-center justify-content-start">
-                                        <a class="btn btn-outline-secondary rounded-circle text-center mr-2 px-0" style="width: 38px; height: 38px;" href="#"><i class="fab fa-twitter"></i></a>
-                                        <a class="btn btn-outline-secondary rounded-circle text-center mr-2 px-0" style="width: 38px; height: 38px;" href="#"><i class="fab fa-facebook-f"></i></a>
-                                        <a class="btn btn-outline-secondary rounded-circle text-center px-0" style="width: 38px; height: 38px;" href="#"><i class="fab fa-linkedin-in"></i></a>
+                                        <a class="btn btn-outline-secondary rounded-circle text-center px-0" style="width: 38px; height: 38px;" href="#"><i class="fab fa-instagram"></i></a>
                                     </div>
                                 </div>
                             </div>
@@ -232,9 +244,7 @@
                                 <img class="img-fluid w-100" src="img/MELINA PAUCAR.jpg" alt="">
                                 <div class="team-overlay position-absolute d-flex align-items-center justify-content-center m-3">
                                     <div class="d-flex align-items-center justify-content-start">
-                                        <a class="btn btn-outline-secondary rounded-circle text-center mr-2 px-0" style="width: 38px; height: 38px;" href="#"><i class="fab fa-twitter"></i></a>
-                                        <a class="btn btn-outline-secondary rounded-circle text-center mr-2 px-0" style="width: 38px; height: 38px;" href="#"><i class="fab fa-facebook-f"></i></a>
-                                        <a class="btn btn-outline-secondary rounded-circle text-center px-0" style="width: 38px; height: 38px;" href="#"><i class="fab fa-linkedin-in"></i></a>
+                                        <a class="btn btn-outline-secondary rounded-circle text-center px-0" style="width: 38px; height: 38px;" href="#"><i class="fab fa-instagram"></i></a>
                                     </div>
                                 </div>
                             </div>
@@ -248,9 +258,7 @@
                                 <img class="img-fluid w-100" src="img/MAYUMI CASAS.jpg" alt="">
                                 <div class="team-overlay position-absolute d-flex align-items-center justify-content-center m-3">
                                     <div class="d-flex align-items-center justify-content-start">
-                                        <a class="btn btn-outline-secondary rounded-circle text-center mr-2 px-0" style="width: 38px; height: 38px;" href="#"><i class="fab fa-twitter"></i></a>
-                                        <a class="btn btn-outline-secondary rounded-circle text-center mr-2 px-0" style="width: 38px; height: 38px;" href="#"><i class="fab fa-facebook-f"></i></a>
-                                        <a class="btn btn-outline-secondary rounded-circle text-center px-0" style="width: 38px; height: 38px;" href="#"><i class="fab fa-linkedin-in"></i></a>
+                                        <a class="btn btn-outline-secondary rounded-circle text-center px-0" style="width: 38px; height: 38px;" href="#"><i class="fab fa-instagram"></i></a>
                                     </div>
                                 </div>
                             </div>
@@ -264,9 +272,7 @@
                                 <img class="img-fluid w-100" src="img/KASSANDRA TUCO.jpg" alt="">
                                 <div class="team-overlay position-absolute d-flex align-items-center justify-content-center m-3">
                                     <div class="d-flex align-items-center justify-content-start">
-                                        <a class="btn btn-outline-secondary rounded-circle text-center mr-2 px-0" style="width: 38px; height: 38px;" href="#"><i class="fab fa-twitter"></i></a>
-                                        <a class="btn btn-outline-secondary rounded-circle text-center mr-2 px-0" style="width: 38px; height: 38px;" href="#"><i class="fab fa-facebook-f"></i></a>
-                                        <a class="btn btn-outline-secondary rounded-circle text-center px-0" style="width: 38px; height: 38px;" href="#"><i class="fab fa-linkedin-in"></i></a>
+                                        <a class="btn btn-outline-secondary rounded-circle text-center px-0" style="width: 38px; height: 38px;" href="#"><i class="fab fa-instagram"></i></a>
                                     </div>
                                 </div>
                             </div>
@@ -280,29 +286,13 @@
                                 <img class="img-fluid w-100" src="img/ZULY FIESTAS.jpg" alt="">
                                 <div class="team-overlay position-absolute d-flex align-items-center justify-content-center m-3">
                                     <div class="d-flex align-items-center justify-content-start">
-                                        <a class="btn btn-outline-secondary rounded-circle text-center mr-2 px-0" style="width: 38px; height: 38px;" href="#"><i class="fab fa-twitter"></i></a>
-                                        <a class="btn btn-outline-secondary rounded-circle text-center mr-2 px-0" style="width: 38px; height: 38px;" href="#"><i class="fab fa-facebook-f"></i></a>
-                                        <a class="btn btn-outline-secondary rounded-circle text-center px-0" style="width: 38px; height: 38px;" href="#"><i class="fab fa-linkedin-in"></i></a>
+                                        <a class="btn btn-outline-secondary rounded-circle text-center px-0" style="width: 38px; height: 38px;" href="#"><i class="fab fa-instagram"></i></a>
                                     </div>
                                 </div>
                             </div>
                             <div class="border border-top-0 text-center" style="padding: 30px;">
                                 <h5 class="font-weight-bold">Zuly Fiestas</h5>
                                 <span>Directora de diseño y marketing</span>
-                            </div>
-                        </div>
-                        <div class="team-item">
-                            <div class="position-relative">
-                                <img class="img-fluid w-100" src="img/team-1.jpg" alt="">
-                                <div class="team-overlay position-absolute d-flex align-items-center justify-content-center m-3">
-                                    <div class="d-flex align-items-center justify-content-start">
-                                        <a class="btn btn-outline-secondary rounded-circle text-center px-0" style="width: 38px; height: 38px;" href="#"><i class="fab fa-instagram"></i></a>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="border border-top-0 text-center" style="padding: 30px;">
-                                <h5 class="font-weight-bold">Ariana Narrea</h5>
-                                <span>Directora general</span>
                             </div>
                         </div>
                     </div>
@@ -328,7 +318,7 @@
                                 En Yaw me siento muy bien, está conformado por excelentes personas las cuales socializan en todo momento con nosotros, considero que ha aportado mucho en mis conocimientos, ya que poco a poco he adquirido nuevos, tanto sus talleres como actividades me han ayudado demasiado tanto en el idioma quechua y otras habilidades, estoy muy agradecida con todo lo brindado, no cabe duda que es lo máximo pertenecer a Yaw.
                             </div>
                             <div class="d-flex align-items-center">
-                                <img class="img-fluid rounded-circle" src="img/testimonial-1.jpg" style="width: 80px; height: 80px;" alt="Image">
+                                <img class="img-fluid rounded-circle" src="img/ALISSON GARCÍA.jpg" style="width: 80px; height: 80px;" alt="Image">
                                 <div class="pl-4">
                                     <h6 class="font-weight-bold">Allison García</h6>
                                     <i class="text-muted">Área de investigación</i>
@@ -340,7 +330,7 @@
                                 Me ha gustado la linda acogida que he tenido, me gusta poder participar desde el interior de esta organización, siento que me ha ayuda a mejorar mis habilidades sociales y espero poder seguir creciendo a nivel personal.
                             </div>
                             <div class="d-flex align-items-center">
-                                <img class="img-fluid rounded-circle" src="img/testimonial-2.jpg" style="width: 80px; height: 80px;" alt="Image">
+                                <img class="img-fluid rounded-circle" src="img/KIARA SANDOVAL.jpg" style="width: 80px; height: 80px;" alt="Image">
                                 <div class="pl-4">
                                     <h6 class="font-weight-bold">Kiara Sandoval</h6>
                                     <i class="text-muted">Área de recursos humanos</i>
@@ -364,7 +354,7 @@
                                 En el poco tiempo que he estado en Yaw me ha gustado esta comunidad, esta familia, me gusta las actividades que realizan para seguir fortaleciendo al equipo y he disfrutado las actividades que he realizado, le he puesto todo mi amor.
                             </div>
                             <div class="d-flex align-items-center">
-                                <img class="img-fluid rounded-circle" src="img/testimonial-4.jpg" style="width: 80px; height: 80px;" alt="Image">
+                                <img class="img-fluid rounded-circle" src="img/TATIANA ACOSTA.jpeg" style="width: 80px; height: 80px;" alt="Image">
                                 <div class="pl-4">
                                     <h6 class="font-weight-bold">Tatiana Acosta</h6>
                                     <i class="text-muted">Área de diseño y marketing</i>
@@ -405,31 +395,31 @@
     <div class="container-fluid pt-5">
         <div class="container">
             <div class="text-center">
-                <small class="bg-primary text-white text-uppercase font-weight-bold text-center px-1">Our Blog</small>
-                <h1 class="mt-2 mb-5">Latest From Blog</h1>
+                <small class="bg-primary text-white text-uppercase font-weight-bold text-center px-1">NOTICIAS</small>
+                <h1 class="mt-2 mb-5">NOTICIAS</h1>
             </div>
             <div class="row">
                 <div class="col-md-6 mb-5">
                     <div class="position-relative">
-                        <img class="img-fluid w-100" src="img/blog-1.jpg" alt="">
+                        <img class="img-fluid w-100" src="img/LOGO CUADRADO YAW.png" alt="">
                         <div class="position-absolute bg-primary d-flex flex-column align-items-center justify-content-center"
                             style="width: 80px; height: 80px; bottom: 0; left: 0;">
-                            <h6 class="text-uppercase mt-2 mb-n2">Jan</h6>
-                            <h1 class="m-0">01</h1>
+                            <h6 class="text-uppercase mt-2 mb-n2">Hasta</h6>
+                            <h1 class="m-0">OCT</h1>
                         </div>
                     </div>
                     <div class="border border-top-0" style="padding: 30px;">
                         <div class="d-flex mb-3">
                             <div class="d-flex align-items-center">
-                                <img class="rounded-circle" style="width: 40px; height: 40px;" src="img/user.jpg" alt="">
-                                <a class="text-muted ml-2" href="">John Doe</a>
+                                <img class="rounded-circle" style="width: 40px; height: 40px;" src="img/LOGO REDONDO YAW .png" alt="">
+                                <a class="text-muted ml-2" href="">YAW</a>
                             </div>
                             <div class="d-flex align-items-center ml-4">
                                 <i class="far fa-bookmark text-primary"></i>
-                                <a class="text-muted ml-2" href="">Web Design</a>
+                                <a class="text-muted ml-2" href="">CONVOCATORIA</a>
                             </div>
                         </div>
-                        <a class="h5 font-weight-bold" href="">Kasd tempor diam sea justo dolor kasd amet dolor labore amet clita est diam dolor</a>
+                        <a class="h5 font-weight-bold" href="">Completa el formulario y únete a nosotros haciendo click aquí</a>
                     </div>
                 </div>
                 <div class="col-md-6 mb-5">
