--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@
                             <div class="testimonial-text position-relative border mb-4" style="padding: 25px 30px;">
                                 En el poco tiempo que he podido estar en Yaw y en lo que he podido interactuar con la he podido ver la alegría de las personas que componen a esta bonita familia. En este espacio se busca que todos puedan participar, es un lugar donde se guarda respeto a las diferentes opiniones y se incentiva a que más personitas se puedan unir a esta gran familia. Por la Área de investigación, he podido conocer un poco más sobre el Perú y profundizar mis conocimientos sobre mi lugar de origen. Los talleres y las reuniones son muy alegres, divertidas y sobre todo, educativas.                             </div>
                             <div class="d-flex align-items-center">
-                                <img class="img-fluid rounded-circle" src="img/testimonial-5.jpg" style="width: 80px; height: 80px;" alt="Image">
+                                <img class="img-fluid rounded-circle" src="img/testimonial-1.jpg" style="width: 80px; height: 80px;" alt="Image">
                                 <div class="pl-4">
                                     <h6 class="font-weight-bold">Anathaza Ochonte</h6>
                                     <i class="text-muted">Área de investigación</i>
@@ -376,7 +376,7 @@
                             <div class="testimonial-text position-relative border mb-4" style="padding: 25px 30px;">
                                Agradezco a esta linda comunidad por ser tan acogedora y hacerme sentir como en mi home, realmente aunque llevo poco tiempo está llena de vida, disfruto mucho de las reuniones, además me han ayudado mucho en adquirir nuevos y buenos conocimientos, los talleres son lo máximo cada una de ellas a aportado demasiado en mí, este espacio se a convertido en mi día a día no sólo por otorgarme alegrías si no por conocer e interactuar con diferentes personitas de nuestro amado Perú y adentrarme más en la diversidad cultural.                 </div>          
                                 <div class="d-flex align-items-center">
-                                <img class="img-fluid rounded-circle" src="img/testimonial-5.jpg" style="width: 80px; height: 80px;" alt="Image">
+                                <img class="img-fluid rounded-circle" src="img/LIZETH MELGAREJO.jpg" style="width: 80px; height: 80px;" alt="Image">
                                 <div class="pl-4">
                                     <h6 class="font-weight-bold">Lizeth Merlgarejo</h6>
                                     <i class="text-muted">Área de diseño y marketing</i>
@@ -405,7 +405,7 @@
                         <div class="position-absolute bg-primary d-flex flex-column align-items-center justify-content-center"
                             style="width: 80px; height: 80px; bottom: 0; left: 0;">
                             <h6 class="text-uppercase mt-2 mb-n2">Hasta</h6>
-                            <h1 class="m-0">OCT</h1>
+                            <h1 class="m-0">Oct</h1>
                         </div>
                     </div>
                     <div class="border border-top-0" style="padding: 30px;">
@@ -424,25 +424,25 @@
                 </div>
                 <div class="col-md-6 mb-5">
                     <div class="position-relative">
-                        <img class="img-fluid w-100" src="img/blog-2.jpg" alt="">
+                        <img class="img-fluid w-100" src="img/LOGO CUADRADO YAW.png" alt="">
                         <div class="position-absolute bg-primary d-flex flex-column align-items-center justify-content-center"
                             style="width: 80px; height: 80px; bottom: 0; left: 0;">
-                            <h6 class="text-uppercase mt-2 mb-n2">Jan</h6>
+                            <h6 class="text-uppercase mt-2 mb-n2">Sep</h6>
                             <h1 class="m-0">01</h1>
                         </div>
                     </div>
                     <div class="border border-top-0" style="padding: 30px;">
                         <div class="d-flex mb-3">
                             <div class="d-flex align-items-center">
-                                <img class="rounded-circle" style="width: 40px; height: 40px;" src="img/user.jpg" alt="">
-                                <a class="text-muted ml-2" href="">John Doe</a>
+                                <img class="rounded-circle" style="width: 40px; height: 40px;" src="img/LOGO REDONDO YAW .png" alt="">
+                                <a class="text-muted ml-2" href="">Yaw y Tantay</a>
                             </div>
                             <div class="d-flex align-items-center ml-4">
                                 <i class="far fa-bookmark text-primary"></i>
-                                <a class="text-muted ml-2" href="">Web Design</a>
+                                <a class="text-muted ml-2" href="">Taller</a>
                             </div>
                         </div>
-                        <a class="h5 font-weight-bold" href="">Kasd tempor diam sea justo dolor kasd amet dolor labore amet clita est diam dolor</a>
+                        <a class="h5 font-weight-bold" href="">Completa el formulario y únete a nuestro taller junto con Tantay acerca del suicidio y cómo prevenirlo</a>
                     </div>
                 </div>
             </div>
@@ -461,13 +461,13 @@
                 <p>Organización juvenil sin fines de lucro que promueve la diversidad y la preservación de tradiciones para fortalecer el orgullo por nuestras raíces en jóvenes y el público en general.</p>
             </div>
             <div class="col-lg-3 col-md-6 mb-5">
-                <h5 class="font-weight-bold text-primary mb-4">Quick Links</h5>
+                <h5 class="font-weight-bold text-primary mb-4">ㅤ</h5>
                 <div class="d-flex flex-column justify-content-start">
-                    <a class="text-white mb-2" href="#"><i class="fa fa-angle-right text-primary mr-2"></i>Home</a>
-                    <a class="text-white mb-2" href="#"><i class="fa fa-angle-right text-primary mr-2"></i>About Us</a>
-                    <a class="text-white mb-2" href="#"><i class="fa fa-angle-right text-primary mr-2"></i>Services</a>
-                    <a class="text-white mb-2" href="#"><i class="fa fa-angle-right text-primary mr-2"></i>Pricing</a>
-                    <a class="text-white" href="#"><i class="fa fa-angle-right text-primary mr-2"></i>Contact Us</a>
+                    <a class="text-white mb-2" ><i ></i>ㅤ</a>
+                    <a class="text-white mb-2" ><i ></i>ㅤ </a>
+                    <a class="text-white mb-2" ><i ></i>ㅤ</a>
+                    <a class="text-white mb-2" ><i ></i>ㅤ</a>
+                    <a class="text-white" ><i ></i>ㅤ </a>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 mb-5">
