--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@
                             <div class="testimonial-text position-relative border mb-4" style="padding: 25px 30px;">
                                 En el poco tiempo que he podido estar en Yaw y en lo que he podido interactuar con la he podido ver la alegría de las personas que componen a esta bonita familia. En este espacio se busca que todos puedan participar, es un lugar donde se guarda respeto a las diferentes opiniones y se incentiva a que más personitas se puedan unir a esta gran familia. Por la Área de investigación, he podido conocer un poco más sobre el Perú y profundizar mis conocimientos sobre mi lugar de origen. Los talleres y las reuniones son muy alegres, divertidas y sobre todo, educativas.                             </div>
                             <div class="d-flex align-items-center">
-                                <img class="img-fluid rounded-circle" src="img/testimonial-1.jpg" style="width: 80px; height: 80px;" alt="Image">
+                                <img class="img-fluid rounded-circle" src="img/ANATHAZA OCHONTE.jpg" style="width: 80px; height: 80px;" alt="Image">
                                 <div class="pl-4">
                                     <h6 class="font-weight-bold">Anathaza Ochonte</h6>
                                     <i class="text-muted">Área de investigación</i>
@@ -419,7 +419,7 @@
                                 <a class="text-muted ml-2" href="">CONVOCATORIA</a>
                             </div>
                         </div>
-                        <a class="h5 font-weight-bold" href="">Completa el formulario y únete a nosotros haciendo click aquí</a>
+                        <a class="h5 font-weight-bold" href="https://docs.google.com/forms/d/e/1FAIpQLSdSwESW-Xt0UFP7EiR-a9i7Ps6Qo7ovwc_W7YgEiWevde_QPw/viewform?usp=sf_link">Completa el formulario y únete a nosotros haciendo click aquí</a>
                     </div>
                 </div>
                 <div class="col-md-6 mb-5">
@@ -435,14 +435,14 @@
                         <div class="d-flex mb-3">
                             <div class="d-flex align-items-center">
                                 <img class="rounded-circle" style="width: 40px; height: 40px;" src="img/LOGO REDONDO YAW .png" alt="">
-                                <a class="text-muted ml-2" href="">Yaw y Tantay</a>
+                                <a class="text-muted ml-2" href="">YAW Y TANTAYy</a>
                             </div>
                             <div class="d-flex align-items-center ml-4">
                                 <i class="far fa-bookmark text-primary"></i>
                                 <a class="text-muted ml-2" href="">TALLER</a>
                             </div>
                         </div>
-                        <a class="h5 font-weight-bold" href="">Completa el formulario y únete a nuestro taller junto con Tantay acerca del suicidio y cómo prevenirlo</a>
+                        <a class="h5 font-weight-bold" href="https://forms.gle/raPwAhKkQpQFVMnBA">Completa el formulario y únete a nuestro taller junto con Tantay acerca del suicidio y cómo prevenirlo</a>
                     </div>
                 </div>
                 
