--- a/index.html
+++ b/index.html
@@ -464,8 +464,8 @@
             <div class="col-lg-3 col-md-6 mb-5">
                 <h5 class="font-weight-bold text-primary mb-4">FORMULARIOS</h5>
                 <div class="d-flex flex-column justify-content-start">
-                    <a class="text-white mb-2" href="#" ><i class="fa fa-angle-right text-primary mr-2"></i>SÉ PARTE DE NOSOTROS</a>
-                    <a class="text-white mb-2" href="#"><i class="fa fa-angle-right text-primary mr-2"></i>TALLER ACERCA DEL SUICIDIO Y PREVENCIÓN </a>
+                    <a class="text-white mb-2" href="https://docs.google.com/forms/d/e/1FAIpQLSdSwESW-Xt0UFP7EiR-a9i7Ps6Qo7ovwc_W7YgEiWevde_QPw/viewform?usp=sf_link" ><i class="fa fa-angle-right text-primary mr-2"></i>SÉ PARTE DE NOSOTROS</a>
+                    <a class="text-white mb-2" href="https://forms.gle/raPwAhKkQpQFVMnBA"><i class="fa fa-angle-right text-primary mr-2"></i>TALLER ACERCA DEL SUICIDIO Y PREVENCIÓN </a>
 
                 </div>
             </div>
